DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <formula>IF( OR(ISPICKVAL(Charge_Type__c, &apos;OTC&apos;), ISPICKVAL(Charge_Type__c,&apos;Installation&apos;)), TotalPrice , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>