DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_EstimatedImplementationDays__c.field-meta.xml
<CustomField>
    <fullName>PNG_EstimatedImplementationDays__c</fullName>
    <label>Estimated Implementation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>