DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_FixedVoiceService__c.field-meta.xml
<CustomField>
    <fullName>PNG_FixedVoiceService__c</fullName>
    <formula>PricebookEntry.Product2.PNG_FixedVoiceService__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Voice Service</label>
    <type>Checkbox</type>
</CustomField>