DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_MRR__c.field-meta.xml
<CustomField>
    <fullName>PNG_MRR__c</fullName>
    <formula>IF( OR(ISPICKVAL(Charge_Type__c, &apos;MRC&apos;), ISPICKVAL(Charge_Type__c,&apos;Rental or Lease&apos;)), TotalPrice , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>