DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_ProductTypeName__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductTypeName__c</fullName>
    <label>Product Type Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>