DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_Region__c.field-meta.xml
<CustomField>
    <fullName>PNG_Region__c</fullName>
    <label>PNG Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Highlands Region</fullName>
            </value>
            <value>
                <fullName>Islands Region</fullName>
            </value>
            <value>
                <fullName>Momase Region</fullName>
            </value>
            <value>
                <fullName>Southern Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>