DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_TotalMonthlyFee__c.field-meta.xml
<CustomField>
    <fullName>PNG_TotalMonthlyFee__c</fullName>
    <label>Total Monthly Fee1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>