DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PNG_Town__c.field-meta.xml
<CustomField>
    <fullName>PNG_Town__c</fullName>
    <label>PNG Town</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PNG_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alotau</fullName>
            </value>
            <value>
                <fullName>Arawa</fullName>
            </value>
            <value>
                <fullName>Banz</fullName>
            </value>
            <value>
                <fullName>Daru</fullName>
            </value>
            <value>
                <fullName>Goroka</fullName>
            </value>
            <value>
                <fullName>Kavieng</fullName>
            </value>
            <value>
                <fullName>Kerema</fullName>
            </value>
            <value>
                <fullName>Kimbe</fullName>
            </value>
            <value>
                <fullName>Kokopo</fullName>
            </value>
            <value>
                <fullName>Kundiawa</fullName>
            </value>
            <value>
                <fullName>Lae</fullName>
            </value>
            <value>
                <fullName>Lorengau</fullName>
            </value>
            <value>
                <fullName>Madang</fullName>
            </value>
            <value>
                <fullName>Mendi</fullName>
            </value>
            <value>
                <fullName>Mount Hagen</fullName>
            </value>
            <value>
                <fullName>Popondetta</fullName>
            </value>
            <value>
                <fullName>Port Moresby</fullName>
            </value>
            <value>
                <fullName>Tari</fullName>
            </value>
            <value>
                <fullName>Vanimo</fullName>
            </value>
            <value>
                <fullName>Wabag</fullName>
            </value>
            <value>
                <fullName>Wewak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>