DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/PriceAdjustmentClausec__c.field-meta.xml
<CustomField>
    <fullName>PriceAdjustmentClausec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Adjustment Clause</label>
    <type>Checkbox</type>
</CustomField>