DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Product_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Charge_Type__c</fullName>
    <label>Product Charge Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>