DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <formula>text(PricebookEntry.Product2.Product_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Interest</label>
    <type>Text</type>
</CustomField>