DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Product_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Type</label>
    <type>Text</type>
</CustomField>