DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/ProRataMRCAct__c.field-meta.xml
<CustomField>
    <fullName>ProRataMRCAct__c</fullName>
    <formula>( 
MRC__c / 
CASE( 
MONTH( Actual_Billed_Date__c ), 
9, 30, 
4, 30, 
6, 30, 
11, 30, 
2, IF(MOD(YEAR(Opportunity.CloseDate), 400) = 0 || (MOD(YEAR(Opportunity.CloseDate), 4) = 0 &amp;&amp; MOD(YEAR(Opportunity.CloseDate), 100) &lt;&gt; 0), 29, 28), 
31 
) 
) 
* 
( 
CASE( 
MONTH( Actual_Billed_Date__c), 
9, 30, 
4, 30, 
6, 30, 
11, 30, 
2, IF(MOD(YEAR(Opportunity.CloseDate), 400) = 0 || (MOD(YEAR(Opportunity.CloseDate), 4) = 0 &amp;&amp; MOD(YEAR(Opportunity.CloseDate), 100) &lt;&gt; 0), 29, 28), 
31 
)- 
DAY( Actual_Billed_Date__c ) + 1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProRata MRC (Act)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>