DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/ProRataOTCEst__c.field-meta.xml
<CustomField>
    <fullName>ProRataOTCEst__c</fullName>
    <formula>IF( ISPICKVAL(  SID_Stage__c  , &quot;Installed/Billed&quot;), 0,( 
OTC__c / 
CASE( 
MONTH( Estimated_Bill_Date__c ), 
9, 30, 
4, 30, 
6, 30, 
11, 30, 
2, IF(MOD(YEAR(Opportunity.CloseDate), 400) = 0 || (MOD(YEAR(Opportunity.CloseDate), 4) = 0 &amp;&amp; MOD(YEAR(Opportunity.CloseDate), 100) &lt;&gt; 0), 29, 28), 
31 
) 
) 
* 
( 
CASE( 
MONTH( Estimated_Bill_Date__c ), 
9, 30, 
4, 30, 
6, 30, 
11, 30, 
2, IF(MOD(YEAR(Opportunity.CloseDate), 400) = 0 || (MOD(YEAR(Opportunity.CloseDate), 4) = 0 &amp;&amp; MOD(YEAR(Opportunity.CloseDate), 100) &lt;&gt; 0), 29, 28), 
31 
)- 
DAY( Estimated_Bill_Date__c ) +1 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProRata OTC (Est)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>