DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Rate_per_Activation__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_Activation__c</fullName>
    <label>Rate per Activation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>