DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Assurance_Comment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Assurance_Comment__c</fullName>
    <label>Revenue Assurance Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>