DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Recognition_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Percentage__c</fullName>
    <label>Revenue Recognition %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>