DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Addition/Port</fullName>
            </value>
            <value>
                <fullName>New Business/Port</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renew and Upgrade</fullName>
            </value>
            <value>
                <fullName>Renew and Downgrade</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Disconnection</fullName>
            </value>
            <value>
                <fullName>Individual to Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate to Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>