DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price_with_Margin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_with_Margin__c</fullName>
    <formula>Sales_Price__c +(Sales_Price__c * Margin_markup_percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT IN USE-Sales Price with Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>