DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Service_Desk_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Entry_Date__c</fullName>
    <label>Service Desk Entry Date</label>
    <type>Date</type>
</CustomField>