DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>zDeprecated Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Points</fullName>
            </value>
            <value>
                <fullName>Analog Lines</fullName>
            </value>
            <value>
                <fullName>Cameras</fullName>
            </value>
            <value>
                <fullName>Channels (T1/E1/SIP)</fullName>
            </value>
            <value>
                <fullName>DIDs</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>Gbps</fullName>
            </value>
            <value>
                <fullName>IP Addresses</fullName>
            </value>
            <value>
                <fullName>Mbps</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>NGFW (next gen firewall)</fullName>
            </value>
            <value>
                <fullName>Rack Units</fullName>
            </value>
            <value>
                <fullName>Routers</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Switches</fullName>
            </value>
            <value>
                <fullName>TB</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>