DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/SID_Stage__c.field-meta.xml
<CustomField>
    <fullName>SID_Stage__c</fullName>
    <description>Pending
Installed/Billed
Disconnected</description>
    <label>SID Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Installed/Billed</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>