DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Sub_Catagory__c.field-meta.xml
<CustomField>
    <fullName>Sub_Catagory__c</fullName>
    <label>Sub Catagory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Catagory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Voice  Installation Fee  WX-1550-15113-00</fullName>
            </value>
            <value>
                <fullName>Wimax  Installation Fee  WX-1550-15010-00</fullName>
            </value>
            <value>
                <fullName>Internet  Installation Fee  WX-1010-00100-00</fullName>
            </value>
            <value>
                <fullName>Voice Installation Fee WX-1010-00010-00</fullName>
            </value>
            <value>
                <fullName>Data VPN  Installation Fee  WX-1010-00300-00</fullName>
            </value>
            <value>
                <fullName>IPLC  Installation Fee  WX-1010-00200-00</fullName>
            </value>
            <value>
                <fullName>CPE Sales  Once off Purchase  WX-1025-01700-00</fullName>
            </value>
            <value>
                <fullName>CPE Sales  Installation Fee  WX-1010-00020-00</fullName>
            </value>
            <value>
                <fullName>PBX / IPBX  Once off Purchase  WX-1025-01550-00</fullName>
            </value>
            <value>
                <fullName>PBX / IPBX  Installation Fee  WX-1010-00030-00</fullName>
            </value>
            <value>
                <fullName>IT Hardware  Once off Purchase  WX-1025-01750-00</fullName>
            </value>
            <value>
                <fullName>IT Hardware  Installation Fee  WX-1010-00040-00</fullName>
            </value>
            <value>
                <fullName>Storage Solutions  Once off Purchase  WX-1025-01800-00</fullName>
            </value>
            <value>
                <fullName>Storage Solutions  Installation Fee  WX-1010-00050-00</fullName>
            </value>
            <value>
                <fullName>Online Back-up  One-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>