DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Sub_Catagory_Quanity__c.field-meta.xml
<CustomField>
    <fullName>Sub_Catagory_Quanity__c</fullName>
    <label>Sub Catagory Quanity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>