DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Supplier_Extended_FOB__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Extended_FOB__c</fullName>
    <formula>FOB_Unit_Cost__c  * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Extended FOB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>