DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Total_Freight_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Clearance__c</fullName>
    <formula>IF(ISPICKVAL( Shipping_Mode__c,&quot;Local&quot;),0,  (Supplier_Extended_FOB__c  * 0.15) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight + Clearance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>