DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions__c</fullName>
    <formula>Quantity *  Impressions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>