DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_NEW__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_NEW__c</fullName>
    <formula>Quantity * Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT IN USE-Total Price new</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>