DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/totalServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>totalServiceRequest__c</fullName>
    <label># total service request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>