DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Transaction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Percent__c</fullName>
    <formula>PricebookEntry.Product2.Transaction_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>