DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Trucking__c.field-meta.xml
<CustomField>
    <fullName>Trucking__c</fullName>
    <label>Trucking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>