DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Unit_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Selling_Price__c</fullName>
    <formula>CEILING( Unit_Cost__c / (1 -  Margin_markup_percent__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>