DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/WeightedMRC__c.field-meta.xml
<CustomField>
    <fullName>WeightedMRC__c</fullName>
    <formula>MRC__c *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeightedMRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>