DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/WeightedNRR__c.field-meta.xml
<CustomField>
    <fullName>WeightedNRR__c</fullName>
    <formula>NRR__c * Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeightedNRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>