DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/WeightedOTC__c.field-meta.xml
<CustomField>
    <fullName>WeightedOTC__c</fullName>
    <formula>OTC__c *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeightedOTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>