DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/Actual_Billed_Date_Cannot_be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Billed_Date_Cannot_be_Future</fullName>
    <active>true</active>
    <description>Actual billed date should be today or in the past</description>
    <errorConditionFormula>Actual_Billed_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Billed_Date__c</errorDisplayField>
    <errorMessage>The Actual billed date should not be in the future.</errorMessage>
</ValidationRule>