DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/DBS_not_allowed_to_Edit_when_Billed.validationRule-meta.xml
<ValidationRule>
    <fullName>DBS_not_allowed_to_Edit_when_Billed</fullName>
    <active>false</active>
    <description>This rule prevents reps from adjusting the Line items of an opportunity once it has been Billed.</description>
    <errorConditionFormula>ISPICKVAL(  SID_Stage__c , &quot;Installed/Billed&quot;) 

&amp;&amp;(
 Opportunity.RecordTypeId  = &quot;0120W000001QE0O&quot;
|| Opportunity.RecordTypeId = &quot;0120W000001lCLQ&quot;
|| Opportunity.RecordTypeId = &quot;0120W000001lCLV&quot;
)

&amp;&amp; $Profile.Name &lt;&gt;&quot;System Admin Jr&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Group Business Solutions&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Jamaica - ICT/GSM Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Bermuda ICT&amp;GSM - Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Barbados ICT - Manager&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Trinidad ICT&amp;GSM - Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Digicel PNG Sales Operations&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;PNG - Sales Executive&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;PNG - Sales Manager&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;DBS Power User&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;DBS Power User - Dealhub Pilot&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;Jamaica - ICT/GSM Power User - Dealhub Pilot&quot;
&amp;&amp; $Profile.Name &lt;&gt;&quot;FWI DBS Standard User - Dealhub Pilot&quot;</errorConditionFormula>
    <errorMessage>Editing the Line Item when the opportunity is Billed is not allowed.
Please contact your Manager for assistance.</errorMessage>
</ValidationRule>