DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/Disconnect_Date_If_SID_Stage_Disconnect.validationRule-meta.xml
<ValidationRule>
    <fullName>Disconnect_Date_If_SID_Stage_Disconnect</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( SID_Stage__c , &quot;Disconnected&quot;),ISBLANK( Disconnected_Date__c))

&amp;&amp; $Profile.Name &lt;&gt;&quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Disconnected_Date__c</errorDisplayField>
    <errorMessage>You must enter a disconnected date when the SID Stage is Disconnected.</errorMessage>
</ValidationRule>