DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/Only_authorized_users_can_bill_line_item.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_authorized_users_can_bill_line_item</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SID_Stage__c, &quot;Installed/Billed&quot;) &amp;&amp;
( $Profile.Name = &quot;DBS Sales Representative&quot; ||
$Profile.Name = &quot;DBS Sales Manager&quot; ||
$Profile.Name = &quot;DBS Group Business Solutions - Read Only&quot; ||
$Profile.Name = &quot;DBS Pre Sales&quot; ||
$Profile.Name = &quot;ChannelPro User (TT Vendor)&quot;)
&amp;&amp;
NOT(ISPICKVAL(Sale_Type__c , &quot;Renewal&quot;))</errorConditionFormula>
    <errorMessage>You do not have permission to bill products or edit billed products. Please contact your in-market operations team.</errorMessage>
</ValidationRule>