DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/PNG_AllowCertainProductsForSalesManager.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_AllowCertainProductsForSalesManager</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Opportunity.RecordTypeId =LEFT( $Label.PNG_OpprtunityRecordTypeId , 15),( Product2.PNG_Product_is_Restricted__c = TRUE ) ,TEXT(Opportunity.StageName)&lt;&gt;&quot;Closed-Lost&quot;, 

NOT($Profile.Id = $Label.PNG_SalesManagerProfileId || 
$Profile.Id = $Label.PNG_SystemAdminProfileId ||  
$Profile.Name = &quot;PNG - Pre-sales&quot;||
$Profile.Name = &quot;PNG - Power User&quot;||
$Profile.Name = &quot;PNG - Billing/Legal&quot;||
$Profile.Name = &quot;PNG - Sales Operations&quot;||
$Profile.Name = &quot;PNG - Service Manager&quot;))</errorConditionFormula>
    <errorMessage>You are not allowed to add this product</errorMessage>
</ValidationRule>