DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/PNG_CanNotChangePrice.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_CanNotChangePrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

Opportunity.RecordTypeId =LEFT( $Label.PNG_OpprtunityRecordTypeId , 15), (Product2.Not_Allowed_to_Change_Standard_Price__c) , 

TEXT(Opportunity.StageName)&lt;&gt;&quot;Closed-Lost&quot;,

NOT(

$Profile.Id = $Label.PNG_SystemAdminProfileId || 
$Profile.Id = &apos;00e0W000001hjv5&apos; ||  
$Profile.Id = &apos;00e0W000001uJNL&apos; ||  
$Profile.Id = &apos;00e0W000002NiHH&apos; ||  
$Profile.Id = &apos;00e0W000001uJNQ&apos; ||  
$Profile.Id = &apos;00ed0000000HJGl&apos; ||  
$Profile.Id = &apos;00ed0000000HFxP&apos; ||  
$Profile.Id = &apos;00ed0000000HFFF&apos; ||  
$Profile.Id = &apos;00e0W000002FIGJ&apos; ||  
$Profile.Id = &apos;00e0W000001q6PN&apos; ||  
$Profile.Id = &apos;00ed0000000Gm6c&apos; ||  
$Profile.Id = &apos;00e0W000001q9PQ&apos; ||  
$Profile.Id = &apos;00ed0000000HFFK&apos; ||  
$Profile.Id = &apos;00ed0000000HFHQ&apos; ||  
$Profile.Id = &apos;00e0W000001yZ8I&apos; ||  
$Profile.Id = &apos;00ed0000000HJjd&apos; ||  
$Profile.Id = &apos;00ed0000000Gsdh&apos; ||  
$Profile.Id = &apos;00e0W000001yZ7Z&apos; ||
$Profile.Id = &apos;00ed0000001uH6P&apos;||  
$Profile.Name = &quot;PNG - Pre-sales&quot;||
$Profile.Name = &quot;PNG - Power User&quot;), 

ISCHANGED( UnitPrice )||  
ISNEW() &amp;&amp; (UnitPrice &lt; ListPrice)

)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>You are not allowed to change the price. Please apply discount.</errorMessage>
</ValidationRule>