DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/PNG_NotAllowedToSelectOtherPricebook.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_NotAllowedToSelectOtherPricebook</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Opportunity.RecordTypeId =LEFT( $Label.PNG_OpprtunityRecordTypeId , 15),NOT(Opportunity.Pricebook2.Id = &quot;01s0W000001UaIEQA0&quot;) , 
NOT( $Profile.Id = $Label.PNG_SystemAdminProfileId))</errorConditionFormula>
    <errorMessage>You are not allowed to select other pricebook.</errorMessage>
</ValidationRule>