DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/Price_changes_with_discount_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_changes_with_discount_only</fullName>
    <active>true</active>
    <description>After commercial review</description>
    <errorConditionFormula>Opportunity.Solution_Design_Approved__c = True 
&amp;&amp;  ISCHANGED( UnitPrice )
&amp;&amp; $Profile.Name &lt;&gt;&quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>Changing of sales price is not allowed after commercial review approval. Use &apos;discount&apos; field to make any necessary adustments.</errorMessage>
</ValidationRule>