DigicielFull/force-app/main/default/objects/OpportunityLineItem/validationRules/TRENDOnlyTRENDPNGfrompublishercanbeused.validationRule-meta.xml
<ValidationRule>
    <fullName>TRENDOnlyTRENDPNGfrompublishercanbeused</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CONTAINS(Opportunity.RecordType.DeveloperName,&quot;Trend&quot;),

AND(NOT(INCLUDES(Opportunity.Publisher__c, &quot;Trend PNG&quot;)),  INCLUDES(Product2.Publisher__c ,&quot;Trend PNG&quot;))
,false)</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>You cannot select this product. This can be used with the Publisher &quot;Trend PNG&quot;, but you don&apos;t have this publisher in your opportunity. Please verify</errorMessage>
</ValidationRule>